--- a/website/assets/stylesheets/sass/combos/_header.scss
+++ b/website/assets/stylesheets/sass/combos/_header.scss
@@ -18,7 +18,7 @@
 
 .header-navigation {
   list-style: none;
-  margin-bottom: $space-x;
+  margin-top: -($space-x);
   text-align: right;
 }
 .header-navigation-item {
